--- a/CodeEndeavors.VidereTemplatePack/ProjectTemplates/Web/Widget/Web.config
+++ b/CodeEndeavors.VidereTemplatePack/ProjectTemplates/Web/Widget/Web.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <system.web>
-        <compilation targetFramework="4.0" />
+        <compilation debug="true" targetFramework="4.5" />
+        <pages controlRenderingCompatibilityVersion="4.0" />
     </system.web>
 
     <appSettings>
