--- a/CodeEndeavors.VidereTemplatePack/ProjectTemplates/Web/Widget/videre.widget.csproj
+++ b/CodeEndeavors.VidereTemplatePack/ProjectTemplates/Web/Widget/videre.widget.csproj
@@ -13,7 +13,7 @@
         <AppDesignerFolder>Properties</AppDesignerFolder>
         <safeprojectname>$safeprojectname$</safeprojectname>
         <AssemblyName>$servernamespace$</AssemblyName>
-        <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
+        <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
         <MvcBuildViews>false</MvcBuildViews>
         <FileUpgradeFlags>
         </FileUpgradeFlags>
@@ -47,54 +47,68 @@
         <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
         <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
     </PropertyGroup>
+    <PropertyGroup>
+        <RootNamespace>$servernamespace$</RootNamespace>
+    </PropertyGroup>
     <ItemGroup>
-        <Reference Include="Microsoft.CSharp" />
-        <Reference Include="System" />
-        <Reference Include="System.Web.Entity" />
-        <Reference Include="System.Web.ApplicationServices" />
-        <Reference Include="System.Data" />
-        <Reference Include="System.Data.Entity" />
-        <Reference Include="System.Web.Extensions" />
-        <Reference Include="System.Web" />
-        <Reference Include="System.Web.Abstractions" />
-        <Reference Include="System.Configuration" />
-        <Reference Include="System.EnterpriseServices" />
-        <Reference Include="Videre.Core">
-            <HintPath>..\lib\Videre.Core.dll</HintPath>
-            <Private>True</Private>
-        </Reference>
-        <Reference Include="CodeEndeavors.Extensions">
-            <HintPath>..\lib\CodeEndeavors.Extensions.dll</HintPath>
-            <Private>True</Private>
-        </Reference>
-        <Reference Include="System.Web.Helpers">
-            <HintPath>..\lib\System.Web.Helpers.dll</HintPath>
-            <Private>True</Private>
-        </Reference>
-        <Reference Include="System.Web.Mvc">
-            <HintPath>..\lib\System.Web.Mvc.dll</HintPath>
-            <Private>True</Private>
-        </Reference>
-        <Reference Include="System.Web.Razor">
-            <HintPath>..\lib\System.Web.Razor.dll</HintPath>
-            <Private>True</Private>
-        </Reference>
-        <Reference Include="System.Web.WebPages">
-            <HintPath>..\lib\System.Web.WebPages.dll</HintPath>
-            <Private>True</Private>
-        </Reference>
-        <Reference Include="System.Web.WebPages.Deployment">
-            <HintPath>..\lib\System.Web.WebPages.Deployment.dll</HintPath>
-            <Private>True</Private>
-        </Reference>
-        <Reference Include="System.Web.WebPages.Razor">
-            <HintPath>..\lib\System.Web.WebPages.Razor.dll</HintPath>
-            <Private>True</Private>
-        </Reference>
-        <Reference Include="Microsoft.Web.Infrastructure">
-            <HintPath>..\lib\Microsoft.Web.Infrastructure.dll</HintPath>
-            <Private>True</Private>
-        </Reference>
+      <Reference Include="CodeEndeavors.Distributed.Cache.Client">
+        <HintPath>..\packages\CodeEndeavors.Distributed.Cache.Client.1.0.8\lib\4.5\CodeEndeavors.Distributed.Cache.Client.dll</HintPath>
+      </Reference>
+      <Reference Include="CodeEndeavors.Extensions, Version=2.0.7.0, Culture=neutral, processorArchitecture=MSIL">
+        <SpecificVersion>False</SpecificVersion>
+        <HintPath>..\packages\CodeEndeavors.Extensions.2.0.7\lib\net45\CodeEndeavors.Extensions.dll</HintPath>
+      </Reference>
+      <Reference Include="CodeEndeavors.ResourceManager, Version=2.0.17.0, Culture=neutral, processorArchitecture=MSIL">
+        <SpecificVersion>False</SpecificVersion>
+        <HintPath>..\packages\CodeEndeavors.ResourceManager.2.0.17\lib\net45\CodeEndeavors.ResourceManager.dll</HintPath>
+      </Reference>
+      <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+        <HintPath>..\packages\Newtonsoft.Json.8.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+        <Private>True</Private>
+      </Reference>
+      <Reference Include="Microsoft.Web.Infrastructure, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+        <Private>True</Private>
+        <HintPath>..\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
+      </Reference>
+      <Reference Include="Microsoft.CSharp" />
+      <Reference Include="System" />
+      <Reference Include="System.Web.Entity" />
+      <Reference Include="System.Web.ApplicationServices" />
+      <Reference Include="System.Data" />
+      <Reference Include="System.Data.Entity" />
+      <Reference Include="System.Web.Extensions" />
+      <Reference Include="System.Web" />
+      <Reference Include="System.Web.Abstractions" />
+      <Reference Include="System.Configuration" />
+      <Reference Include="System.EnterpriseServices" />
+      <Reference Include="System.Web.Helpers, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+        <SpecificVersion>False</SpecificVersion>
+        <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.Helpers.dll</HintPath>
+      </Reference>
+      <Reference Include="System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+        <SpecificVersion>False</SpecificVersion>
+        <HintPath>..\packages\Microsoft.AspNet.Mvc.5.2.3\lib\net45\System.Web.Mvc.dll</HintPath>
+      </Reference>
+      <Reference Include="System.Web.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+        <SpecificVersion>False</SpecificVersion>
+        <HintPath>..\packages\Microsoft.AspNet.Razor.3.2.3\lib\net45\System.Web.Razor.dll</HintPath>
+      </Reference>
+      <Reference Include="System.Web.WebPages, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+        <SpecificVersion>False</SpecificVersion>
+        <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.WebPages.dll</HintPath>
+      </Reference>
+      <Reference Include="System.Web.WebPages.Deployment, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+        <SpecificVersion>False</SpecificVersion>
+        <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.WebPages.Deployment.dll</HintPath>
+      </Reference>
+      <Reference Include="System.Web.WebPages.Razor, Version=3.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+        <SpecificVersion>False</SpecificVersion>
+        <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.WebPages.Razor.dll</HintPath>
+      </Reference>
+      <Reference Include="Videre.Core">
+        <HintPath>..\packages\Videre.Core.2.2.8\lib\net45\Videre.Core.dll</HintPath>
+      </Reference>
+        
     </ItemGroup>
     <ItemGroup>
         <Compile Include="Controllers\ToDoController.cs" />
@@ -119,6 +133,7 @@
         <None Include="package.manifest">
             <SubType>Designer</SubType>
         </None>
+        <None Include="packages.config" />
     </ItemGroup>
     <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
     <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
