--- a/CodeEndeavors.VidereTemplatePack/packages.config
+++ b/CodeEndeavors.VidereTemplatePack/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="TemplateBuilder" version="1.0.3.45-beta" targetFramework="net45" />
+  <package id="PSHostsFile" version="3.0.5" targetFramework="net45" />
+  <package id="TemplateBuilder" version="1.1.3" targetFramework="net45" />
 </packages>
