--- a/CodeEndeavors.VidereTemplatePackWizards/CodeEndeavors.VidereTemplatePackWizards.csproj
+++ b/CodeEndeavors.VidereTemplatePackWizards/CodeEndeavors.VidereTemplatePackWizards.csproj
@@ -59,10 +59,16 @@
       <Private>True</Private>
       <HintPath>..\packages\Microsoft.Web.Administration.7.0.0.0\lib\net20\Microsoft.Web.Administration.dll</HintPath>
     </Reference>
+    <Reference Include="PSHostsFile, Version=1.0.0.0, Culture=neutral, PublicKeyToken=da3f5fed4111ee54, processorArchitecture=MSIL">
+      <Private>True</Private>
+      <HintPath>..\packages\PSHostsFile.3.0.5\lib\PSHostsFile.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.IO.Compression" />
+    <Reference Include="System.IO.Compression.FileSystem" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Xml" />
