--- a/CodeEndeavors.VidereTemplatePack/ProjectTemplates/Web/Widget/videre.widget.csproj
+++ b/CodeEndeavors.VidereTemplatePack/ProjectTemplates/Web/Widget/videre.widget.csproj
@@ -134,6 +134,7 @@
             <SubType>Designer</SubType>
         </None>
         <None Include="packages.config" />
+        <None Include="Web.config" />
     </ItemGroup>
     <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
     <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
