ENH: Added item templates for controller and services along with commented out code for servicehost plug in.

--- a/CodeEndeavors.VidereTemplatePack/CodeEndeavors.VidereTemplatePack.csproj
+++ b/CodeEndeavors.VidereTemplatePack/CodeEndeavors.VidereTemplatePack.csproj
@@ -94,6 +94,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Guids.cs" />
+    <Content Include="ItemTemplates\Web\BaseController\Definitions\CSharp.vstemplate" />
+    <Resource Include="ItemTemplates\Web\BaseController\icon.png" />
+    <Content Include="ItemTemplates\Web\Service\Service.cs" />
+    <Content Include="ItemTemplates\Web\BaseController\Controller.cs" />
     <Compile Include="ProjectTemplates\Web\Widget\Controllers\ToDoController.cs" />
     <Compile Include="ProjectTemplates\Web\Widget\Models\Task.cs" />
     <Compile Include="ProjectTemplates\Web\Widget\Properties\AssemblyInfo.cs" />
@@ -121,6 +125,8 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="ItemTemplates\Web\PackageManifest\package.manifest" />
+    <Content Include="ItemTemplates\Web\Service\Definitions\CSharp.vstemplate" />
+    <Resource Include="ItemTemplates\Web\Service\icon.png" />
     <Content Include="ItemTemplates\Web\ClientSidePresenter\Definitions\CSharp.vstemplate" />
     <Content Include="ItemTemplates\Web\ClientSidePresenter\Definitions\VB.vstemplate" />
     <Content Include="lib\MSBuild.Community.Tasks.Targets">
