--- a/CodeEndeavors.VidereTemplatePack/CodeEndeavors.VidereTemplatePack.csproj
+++ b/CodeEndeavors.VidereTemplatePack/CodeEndeavors.VidereTemplatePack.csproj
@@ -94,8 +94,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Guids.cs" />
-    <Content Include="ItemTemplates\Web\BaseController\Definitions\CSharp.vstemplate" />
+    <Content Include="ItemTemplates\Web\BaseController\Definitions\CSharp.vstemplate">
+      <SubType>Designer</SubType>
+    </Content>
     <Resource Include="ItemTemplates\Web\BaseController\icon.png" />
+    <Content Include="ItemTemplates\Web\ListItem\Definitions\CSharp.vstemplate" />
+    <Resource Include="ItemTemplates\Web\ListItem\icon.png" />
+    <Content Include="ItemTemplates\Web\ListItem\clientpresenter.js" />
     <Content Include="ItemTemplates\Web\Service\Service.cs" />
     <Content Include="ItemTemplates\Web\BaseController\Controller.cs" />
     <Compile Include="ProjectTemplates\Web\Widget\Controllers\ToDoController.cs" />
@@ -124,6 +129,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
+    <None Include="ItemTemplates\Web\ListItem\list.cshtml" />
     <None Include="ItemTemplates\Web\PackageManifest\package.manifest" />
     <Content Include="ItemTemplates\Web\Service\Definitions\CSharp.vstemplate" />
     <Resource Include="ItemTemplates\Web\Service\icon.png" />
