--- a/CodeEndeavors.VidereTemplatePack/ProjectTemplates/Web/Widget/videre.widget.csproj
+++ b/CodeEndeavors.VidereTemplatePack/ProjectTemplates/Web/Widget/videre.widget.csproj
@@ -58,9 +58,9 @@
         <SpecificVersion>False</SpecificVersion>
         <HintPath>..\packages\CodeEndeavors.Extensions.2.0.7\lib\net45\CodeEndeavors.Extensions.dll</HintPath>
       </Reference>
-      <Reference Include="CodeEndeavors.ResourceManager, Version=2.0.17.0, Culture=neutral, processorArchitecture=MSIL">
+      <Reference Include="CodeEndeavors.ResourceManager, Version=2.0.19.0, Culture=neutral, processorArchitecture=MSIL">
         <SpecificVersion>False</SpecificVersion>
-        <HintPath>..\packages\CodeEndeavors.ResourceManager.2.0.17\lib\net45\CodeEndeavors.ResourceManager.dll</HintPath>
+        <HintPath>..\packages\CodeEndeavors.ResourceManager.2.0.19\lib\net45\CodeEndeavors.ResourceManager.dll</HintPath>
       </Reference>
       <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
         <HintPath>..\packages\Newtonsoft.Json.8.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -105,8 +105,9 @@
         <SpecificVersion>False</SpecificVersion>
         <HintPath>..\packages\Microsoft.AspNet.WebPages.3.2.3\lib\net45\System.Web.WebPages.Razor.dll</HintPath>
       </Reference>
-      <Reference Include="Videre.Core">
-        <HintPath>..\packages\Videre.Core.2.2.8\lib\net45\Videre.Core.dll</HintPath>
+      <Reference Include="Videre.Core, Version=2.2.12.0, Culture=neutral, processorArchitecture=MSIL">
+        <SpecificVersion>False</SpecificVersion>
+        <HintPath>..\packages\Videre.Core.2.2.12\lib\net45\Videre.Core.dll</HintPath>
       </Reference>
         
     </ItemGroup>
