ENH: Added CodeEndeavors using statement in registration to handle client registration for service endpoint.

--- a/CodeEndeavors.VidereTemplatePack/CodeEndeavors.VidereTemplatePack.csproj
+++ b/CodeEndeavors.VidereTemplatePack/CodeEndeavors.VidereTemplatePack.csproj
@@ -146,7 +146,9 @@
       <IncludeInVSIX>true</IncludeInVSIX>
     </Content>
     <None Include="packages.config" />
-    <None Include="ProjectTemplates\Web\Widget\build.targets" />
+    <None Include="ProjectTemplates\Web\Widget\build.targets">
+      <SubType>Designer</SubType>
+    </None>
     <None Include="ProjectTemplates\Web\Widget\package.manifest" />
     <None Include="ProjectTemplates\Web\Widget\packages.config">
       <SubType>Designer</SubType>
