--- a/CodeEndeavors.VidereTemplatePackWizards/CodeEndeavors.VidereTemplatePackWizards.csproj
+++ b/CodeEndeavors.VidereTemplatePackWizards/CodeEndeavors.VidereTemplatePackWizards.csproj
@@ -44,12 +44,15 @@
     </Reference>
     <Reference Include="envdte100, Version=10.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <EmbedInteropTypes>True</EmbedInteropTypes>
+	  <HintPath>..\lib\EnvDTE100.dll</HintPath>
     </Reference>
     <Reference Include="EnvDTE80, Version=8.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <EmbedInteropTypes>False</EmbedInteropTypes>
+	  <HintPath>..\lib\EnvDTE80.dll</HintPath>
     </Reference>
     <Reference Include="envdte90, Version=9.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <EmbedInteropTypes>True</EmbedInteropTypes>
+	  <HintPath>..\lib\EnvDTE90.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.VisualStudio.TemplateWizardInterface, Version=8.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
