--- a/CodeEndeavors.VidereTemplatePackWizards/CodeEndeavors.VidereTemplatePackWizards.csproj
+++ b/CodeEndeavors.VidereTemplatePackWizards/CodeEndeavors.VidereTemplatePackWizards.csproj
@@ -81,6 +81,7 @@
     </Reference>
     <Reference Include="VSLangProj, Version=7.0.3300.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <EmbedInteropTypes>True</EmbedInteropTypes>
+	  <HintPath>..\lib\VSLangProj.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
